--- a/pages/index.html
+++ b/pages/index.html
@@ -1,16 +1,39 @@
 ---
 layout   : default
-permalink: /
+permalink: /index
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4.1 &mdash; Voorbeeld
+title: Charlotte Vogels
 ---
-<div class="jumbotron">
-    <h1 class="display-3">{{ page.title }}</h1>
+<div class="row justify-content-center">
+    <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
+        <article>
+            <img src="https://media.giphy.com/media/l4FGB6PYR61gnzLji/source.gif" class=“mobile-img” width="100%"/>
+            <h2 class="text-kader">Soorten</h2>
+            <p class="text-kader">Door dat bellen blazen onze specialiteit is, zijn wij echt getraineerde professionelen. Wij kunnen verschillende soorten bellen blazen. Is het thema van jouw feestje jungle? Geen probleem, wij kunnen verschillende dieren als bellen blazen! Heb je liever vliegende bloemen of wolkjes op je feest? Wij kunnen alles aan!</p>
+        </article>
+    </div>
+    <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
+        <article>
+            <img src="https://media.giphy.com/media/xUPGcgEFJFbpFOuFTW/giphy.gif" class=“mobile-img” width="100%"/>
+            <h2 class="text-kader" id="praktisch">Info</h2>
+            <p class="text-kader">Het is heel simpel om een bellenblazer te huren! ga naar onze ‘reserveren’ pagina en volg de gemakkelijke stappen</p>
+        </article>
+    </div>
 </div>
-<div class="container">
-    <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.1/getting-started/introduction/">Bootstrap 4.1 documentation</a>
+<div class="row justify-content-center">
+    <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
+        <article>
+            <img src="https://media.giphy.com/media/vYTo95h4e2j6M/giphy.gif" class=“mobile-img” width="100%"/>
+            <h2 class="text-kader">Soorten</h2>
+            <p class="text-kader">Door dat bellen blazen onze specialiteit is, zijn wij echt getraineerde professionelen. Wij kunnen verschillende soorten bellen blazen. Is het thema van jouw feestje jungle? Geen probleem, wij kunnen verschillende dieren als bellen blazen! Heb je liever vliegende bloemen of wolkjes op je feest? Wij kunnen alles aan!</p>
+        </article>
+    </div>
+    <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
+        <article>
+                <img src="https://media.giphy.com/media/HPsYJ0YGMzxZe/giphy.gif" class=“mobile-img” width="100%"/>
+                <h2 class="text-kader">Info</h2>
+            <p class="text-kader">Het is heel simpel om een bellenblazer te huren! ga naar onze ‘reserveren’ pagina en volg de gemakkelijke stappen</p>
+        </article>
+    </div>
 </div>
-
-
-hallo
