--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@ title: Contact
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email-adres</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
-                        <small id="emailHelp" class="form-text text-muted">We delen deze gegevens niet.</small>
+                        <small id="emailHelp" class="form-text text-muted">*Wij geven deze gegevens niet door aan derden.</small>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Naam</label>
