--- a/pages/index.html
+++ b/pages/index.html
@@ -9,15 +9,19 @@ title: Charlotte Vogels
     <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
         <article>
             <img src="https://media.giphy.com/media/l4FGB6PYR61gnzLji/source.gif" class=“mobile-img” width="100%"/>
-            <h2 class="text-kader">Soorten</h2>
-            <p class="text-kader">Door dat bellen blazen onze specialiteit is, zijn wij echt getraineerde professionelen. Wij kunnen verschillende soorten bellen blazen. Is het thema van jouw feestje jungle? Geen probleem, wij kunnen verschillende dieren als bellen blazen! Heb je liever vliegende bloemen of wolkjes op je feest? Wij kunnen alles aan!</p>
+            <h2 class="text-kader">Welkom</h2>
+            <p class="text-kader">Welkom! Ben jij die dagelijke grauwe sfeer ook soms zo beu? Heb je zin om het inner kind wat meer los te laten? Dan ben je bij ons aan het juiste adres.
+                                We can turn that frown upside down! Vanaf heden kan je een professionele bellenblazer huren voor op een feestje of gewoon omdat je er zin in hebt. 
+                                Plezier en vreugde gegarendeerd!
+            </p>
         </article>
     </div>
     <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
         <article>
             <img src="https://media.giphy.com/media/xUPGcgEFJFbpFOuFTW/giphy.gif" class=“mobile-img” width="100%"/>
-            <h2 class="text-kader" id="praktisch">Info</h2>
-            <p class="text-kader">Het is heel simpel om een bellenblazer te huren! ga naar onze ‘reserveren’ pagina en volg de gemakkelijke stappen</p>
+            <h2 class="text-kader">Soorten</h2>
+            <p class="text-kader">Wij bieden een ruim assortiment aan van veschillende soorten magische bellen. Zo kunt u bij ons terecht voor wolken, bloemen, dieren en normale bellen.
+                                Een combinatie is ook mogelijk, gelieve ons dan een mailtje te sturen. Geeft u een feest met een specifiek thema, laat het ons weten en wij passen ons aan aan uw wensen! Wij blazen ons in jullie gewenste vorm.</p>
         </article>
     </div>
 </div>
@@ -25,15 +29,18 @@ title: Charlotte Vogels
     <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
         <article>
             <img src="https://media.giphy.com/media/vYTo95h4e2j6M/giphy.gif" class=“mobile-img” width="100%"/>
-            <h2 class="text-kader">Soorten</h2>
-            <p class="text-kader">Door dat bellen blazen onze specialiteit is, zijn wij echt getraineerde professionelen. Wij kunnen verschillende soorten bellen blazen. Is het thema van jouw feestje jungle? Geen probleem, wij kunnen verschillende dieren als bellen blazen! Heb je liever vliegende bloemen of wolkjes op je feest? Wij kunnen alles aan!</p>
+            <h2 class="text-kader" id="praktisch">Info</h2>
+            <p class="text-kader">Hoe gaan wij te werk? Klik op onze 'reserveren' pagina en duid dan je keuze aan. Zo kan je kiezen met hoeveel we bij jou langs komen. Momenteel zij we 
+                                    met 5 professionel bellenblazers maar ons bedrijf is nog in volle bloei. Indien je ons wilt huren voor grote evenementen, gelieve ons dan ruim op voorhand een mail te sturen.
+            </p>
         </article>
     </div>
     <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
         <article>
                 <img src="https://media.giphy.com/media/HPsYJ0YGMzxZe/giphy.gif" class=“mobile-img” width="100%"/>
-                <h2 class="text-kader">Info</h2>
-            <p class="text-kader">Het is heel simpel om een bellenblazer te huren! ga naar onze ‘reserveren’ pagina en volg de gemakkelijke stappen</p>
+                <h2 class="text-kader">Het blaaswerk</h2>
+            <p class="text-kader">Ons team bestaat uit vijf passionele bellenblazers. Wij gaan professioneel en ecologisch te werkt. Ons materiaal bestaat uit gerecycleerde en duurzame 
+                                    onderdelen. Deze zijn zorgvuldig getest en goedgekeurd. Ons zeepsopje prikt niet in de ogen en is ecologische verantwoord want wij dragen ook ons steentje bij aan de natuur. </p>
         </article>
     </div>
 </div>
