--- a/pages/overons.html
+++ b/pages/overons.html
@@ -9,7 +9,10 @@ title: Over ons
         <div class="row justify-content-center">
                 <div class="col-10 kader">
                         <h1 class="textcenter text-kader"> Over ons </h1>
-                        <p class="text-kader">Dit bedrijf staat onder leiding van Charlotte vogels</p>
+                        <p class="text-kader">Ons team bestaat uit vijf vrolijke leden die magische creaties kunnen maken met enkel zeep en water. Alle vijf zijn wij getrainde en professionele bellenblazer die staan 
+                                        te popelen om jou een lach op het gezicht te toveren. Wij schaven onze kennis regelmatig bij door trainingen te volgend zo garanderen we onze prijs kwaliteit.
+                                        Wij dragen sinds 2018 de officiele titel van 'beste europese bellenblazers'. Follow the bubbles!
+                        </p>
                 </div>
         </div>
 </div>
