--- a/pages/reserveren.html
+++ b/pages/reserveren.html
@@ -92,6 +92,20 @@ title: Reserveren
       </select>
    </div>
 
+
+   <div class="container">
+      <div class="row">
+        <div class="form-group col-md-4">
+        <label for="exampleFormControlSelect1">Hoeveel bellenblazers wilt u huren?</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+       </div>
+
     
         <table class="table table-light">
                 <thead>
