--- a/pages/index.html
+++ b/pages/index.html
@@ -28,8 +28,8 @@ title: Charlotte Vogels
 <div class="row justify-content-center">
     <div class="col-10 col-md-10 col-lg-5 col-xl-5 kader">
         <article>
-            <img src="https://media.giphy.com/media/vYTo95h4e2j6M/giphy.gif" class=“mobile-img” width="100%"/>
-            <h2 class="text-kader" id="praktisch">Info</h2>
+            <img src="https://media.giphy.com/media/vYTo95h4e2j6M/giphy.gif" id="praktisch" class=“mobile-img” width="100%"/>
+            <h2 class="text-kader" >Info</h2>
             <p class="text-kader">Hoe gaan wij te werk? Klik op onze 'reserveren' pagina en duid dan je keuze aan. Zo kan je kiezen met hoeveel we bij jou langs komen. Momenteel zij we 
                                     met 5 professionel bellenblazers maar ons bedrijf is nog in volle bloei. Indien je ons wilt huren voor grote evenementen, gelieve ons dan ruim op voorhand een mail te sturen.
             </p>
