--- a/pages/overons.html
+++ b/pages/overons.html
@@ -10,8 +10,8 @@ title: Over ons
                 <div class="col-10 kader">
                         <h1 class="textcenter text-kader"> Over ons </h1>
                         <p class="text-kader">Ons team bestaat uit vijf vrolijke leden die magische creaties kunnen maken met enkel zeep en water. Alle vijf zijn wij getrainde en professionele bellenblazer die staan 
-                                        te popelen om jou een lach op het gezicht te toveren. Wij schaven onze kennis regelmatig bij door trainingen te volgend zo garanderen we onze prijs kwaliteit.
-                                        Wij dragen sinds 2018 de officiele titel van 'beste europese bellenblazers'. Follow the bubbles!
+                                        te popelen om jou een lach op het gezicht te toveren. Wij schaven onze kennis regelmatig bij door trainingen te volgen zo garanderen we onze prijs kwaliteit.
+                                        Wij dragen sinds 2018 de officiele titel van 'Beste Europese Bellenblazers'. Follow the bubbles and let the fun begin!
                         </p>
                 </div>
         </div>
