--- a/pages/betalen.html
+++ b/pages/betalen.html
@@ -24,13 +24,13 @@ title: Betalen
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option3">
                         <label class="form-check-label" for="exampleRadios2">
                           Visa
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option4">
                         <label class="form-check-label" for="exampleRadios2">
                           Paypal
                         </label>
@@ -57,14 +57,14 @@ title: Betalen
                             </div>
                         </form>
                         <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios" value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios">
                                   Ik aanvaard de algemene voorwaarden
                                 </label>
                               </div>
                               <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                                <label class="form-check-label" for="exampleRadios2">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios" value="option2">
+                                <label class="form-check-label" for="exampleRadios">
                                   Ik wil op de hoogte gehouden worden van nieuwe acties via mail
                                 </label>
                               </div>
