--- a/pages/reserveren.html
+++ b/pages/reserveren.html
@@ -92,7 +92,7 @@ title: Reserveren
       </select>
     </div>
       <div class="form-group col-md-4">
-          <label for="exampleFormControlSelect1">Hoeveel bellenblazers wilt u huren?</label>
+          <label for="exampleFormControlSelect1">Aantal bellenblazers</label>
           <select class="form-control" id="exampleFormControlSelect1">
             <option>1</option>
             <option>2</option>
